@@ -1,8 +1,11 @@
 v2.5.8.2 - Drag and Drop now supports dragging directories to load all that
 	   is found inside them.
+	 - Drag and Drop now supports dragging single files like mp3s.
 	 - Color Info now displays the gamma/gain'ed image values instead of 
 	   just the original values.
-	 - MultiView images (Stereo) now supports a side-by-side view.
+	 - MultiView images (Stereo) now supports a side-by-side and
+	   crossed eye view.
+	 - MultiView images (Stereo) now supports multiple animated images.
 
 v2.5.8.1 - Bug fixed drag and drop of sequences as it had gotten broken.
 	 - Bug fixed preview pictures which could show wrong colors in movie
